--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@ body {
 
 label {
   color: rgb(3, 78, 3);
+  font-family: "Roboto";
+  font-weight: 700;
 }
 
 h1 {
@@ -14,7 +16,7 @@ h1 {
   ;
   font-family: 'Roboto';
   font-weight: 700;
-  font-size: 46px;
+  font-size: 54px;
 
 }
 
