--- a/src/components/Loading/index.css
+++ b/src/components/Loading/index.css
@@ -2,7 +2,7 @@
 
 
     width: 100%;
-    height: 600px;
+    height: 50%;
     display: flex;
     justify-content: center !important;
     align-items: center !important;
